--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="container">
-        <h1>Some popular hikes</h1>
+        <h1>Some popular hikes to do!</h1>
         <!-- Here is container for cards  -->
         <div class="container">
             <div id="hikeCardGroup" class="row row-cols-auto">
